--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,1 @@
-google-genai==1.33.0
-Pillow==11.3.0
-google-api-core==2.25.1
-google-api-python-client==2.181.0
-googleapis-common-protos==1.70.0
-numpy==1.26.4
+google-genai＞=1.52.0
